# autoresearch-smoke-test

./: .github\copilot-instructions.md  .gitignore  .repo-autoresearch\autoresearch_instructions.md  .repo-autoresearch\experiment.yaml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  agent_prompt_autoresearch\__init__.py  agent_prompt_autoresearch\bundled\__init__.py  agent_prompt_autoresearch\bundled\repo_autoresearch\autoresearch_instructions.md  agent_prompt_autoresearch\bundled\repo_autoresearch\evidence-templates\standard.md  agent_prompt_autoresearch\bundled\repo_autoresearch\experiment.yaml  agent_prompt_autoresearch\bundled\repo_autoresearch\variants\baseline.md  agent_prompt_autoresearch\bundled\repo_autoresearch\variants\compact-diff.md  agent_prompt_autoresearch\bundled\scripts\validate_autoresearch.py  agent_prompt_autoresearch\init_cli.py  app\hello.py  docs\DEVELOPMENT.md  pyproject.toml  requirements-dev.txt  scripts\create_gist.py  scripts\draft_challenger.py  tests\conftest.py  tests\test_autoresearch_ci.py  tests\test_autoresearch_core.py  tests\test_autoresearch_gist.py  tests\test_autoresearch_promotion.py  tests\test_draft_challenger.py  tests\test_experiment_metrics.py  tests\test_get_variant_helpers.py  tests\test_get_variant_program.py  tests\test_hello.py  tests\test_init_cli.py
.github/: copilot-instructions.md
.repo-autoresearch/: PROMOTION.md  experiment.yaml  program.md
scripts/: autoresearch.py  experiment_metrics.py  get_variant.py  record_metric.py  validate_autoresearch.py
skill/: SKILL.md
src/api/: health.py
(+7 files in other folders)
